# demo_transplant_to_soc

./: CMakeLists.txt  copy_to_devcie_executable_only.sh  now.c  original.c  rebuild.sh  run.sh
output/: ss928_objectTrack
sample/: createFrame.c  createFrame.h  frameProcess.c  frameProcess.h  kalman_filter.c  kalman_filter.h  main.c  siamfcpp.c  siamfcpp.h  stmTrack.c  stmTrack.h
svp/common/: sample_common_svp.h
svp/npu/: siamfcpp_process.c  siamfcpp_process.h  stmTrack_process.c  stmTrack_process.h
svp/npu/include/: detectobjs.h  sample_npu_model.h  sample_npu_process.h
svp/npu/sample_svp_npu/: sample_npu_model.c  sample_npu_process.c
